--- a/naverApi/app/src/main/AndroidManifest.xml
+++ b/naverApi/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.movie.MovieListActivity"/>
+
     </application>
 
 </manifest>
